--- a/jquerrycalc/styles.css
+++ b/jquerrycalc/styles.css
@@ -33,11 +33,12 @@
     border: 1px solid black;
     padding: 2px;
     margin: 2px;
+    height: 20px;
     background-color: white;
 }
 #background {
     background-color: lightgray;
-    width: 149px;
+    width: 150px;
 }
 
 .reset {
