github issue fixes

--- a/angularjscalc/css/styles.css
+++ b/angularjscalc/css/styles.css
@@ -1,6 +1,6 @@
 /* Put your css in here */
 
-input[name=num] {
+button[name=num] {
     background-color: light gray;
     width: 50px;
     height: 50px;
@@ -8,7 +8,7 @@ input[name=num] {
     margin: 1px;
     padding: 1px;
   }
-  input[name=operator]{
+  button[name=operator]{
     background-color: lightblue;
     width: 50px;
     height: 50px;
@@ -16,7 +16,7 @@ input[name=num] {
     margin: 1px;
     padding: 1px;
   }
-  input[name=clear]{
+  button[name=clear]{
     background-color: pink;
     width: 50px;
     height: 50px;
@@ -24,7 +24,7 @@ input[name=num] {
     margin: 1px;
     padding: 1px;
   }
-  input[name=equal]{
+  button[name=equal]{
     background-color: lightgreen;
     width: 50px;
     height: 50px;
@@ -40,8 +40,9 @@ input[name=num] {
     margin: 1px;
     padding: 1px;
     text-align:right;
+    background-color: white;
   }
-  input {
+  button {
     border-radius: 10px;
   }
   .wrapper{
