--- a/htmlcalc/css/styles.css
+++ b/htmlcalc/css/styles.css
@@ -1,51 +1,82 @@
-.num {
-    width: 30px;
-    height: 30px;
-    background-color: lightgrey;
-    padding: 2px;
-    margin: 2px;
-}
-.delete {
-    width: 67px;
-    height: 30px;
-    background-color: red;
-    padding: 2px;
-    margin: 2px;
-}
-.operator {
-    width: 30px;
-    height: 30px;
-    background-color: lightgreen;
-    padding: 2px;
-    margin: 2px;
-}
-.equal {
-        width: 144px;
-        height: 30px;
-        background-color: green;
-        padding: 2px;
-        margin: 2px;
-}
-#result {
-    width: 145px;
-    display: block;
-    text-align: right;
-    border: 1px solid black;
-    padding: 2px;
-    margin: 2px;
-    background-color: white;
-}
-#background {
-    background-color: lightgray;
-    width: 149px;
+
+
+/* Using box shadows to create 3D effects */
+#calculator {
+	width: 285px;
+	height: auto;
+	
+	margin: 100px auto;
+	padding: 20px 20px 9px;
+	
+	background: #9dd2ea;
+	background: linear-gradient(#9dd2ea, #8bceec);
+	border-radius: 3px;
+	box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
-.reset {
-    
-        width: 67px;
-        height: 30px;
-        background-color: lightpink;
-        padding: 2px;
-        margin: 2px;
 
+/* Inset shadow on the screen to create indent */
+.screen {
+	height: 40px;
+	width: 265px;
+	text-align: right;
+	padding: 0 10px;
+	background: rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    font-size: 32px;
+}
+
+/* Clear floats */
+.keys, .top {
+    overflow: hidden;
+}
+
+/* Applying same to the keys */
+.keys span {
+	float: left;
+	position: relative;
+	top: 0;
+	cursor: pointer;
+	width: 66px;
+	height: 36px;
+	background: white;
+	border-radius: 3px;
+	margin: 0 7px 11px 0;
+	color: #888;
+	line-height: 36px;
+	text-align: center;
+	user-select: none;	
+}
+
+/* Remove right margins from operator keys */
+/* style different type of keys (operators/evaluate/clear) differently */
+.keys span.operator {
+	background: #FFF0F5;
+	margin-right: 0;
+}
+
+.keys span.eval {
+	background: #f1ff92;
+	color: #888e5f;
+}
+
+.keys span.clear {
+	background: #ff9fa8;
+	color: white;
+}
+
+/* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
+.keys span:active {
+	box-shadow: 0px 0px #6b54d3;
+	top: 4px;
+}
+
+.keys span.eval:active {
+	box-shadow: 0px 0px #717a33;
+	top: 4px;
+}
+
+.top span.clear:active {
+	top: 4px;
+	box-shadow: 0px 0px #d3545d;
 }
